A few more ML stuff

--- a/One Hot Encoding/Get Dummies(pandas) vs One Hot Encoder(sklearn).ipynb
+++ b/One Hot Encoding/Get Dummies(pandas) vs One Hot Encoder(sklearn).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4  monroe township  4000  725000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "4  monroe township  4000  725000                1            0             0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "12  3600  695000                0            1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,17 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     " #indepedent Variables go in X\n",
-    "x= final.drop('price', axis='columns')"
+    "X= final.drop('price', axis='columns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -434,18 +434,18 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(x,y)"
+    "model.fit(X,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "array([590468.71640508])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -474,18 +474,18 @@
        "0.9573929037221873"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.score(x,y)"
+    "model.score(X,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "12      robinsville  3600  695000"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,10 +644,347 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>town</th>\n",
+       "      <th>area</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>565000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3200</td>\n",
+       "      <td>610000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>680000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4000</td>\n",
+       "      <td>725000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>585000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2800</td>\n",
+       "      <td>615000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3300</td>\n",
+       "      <td>650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>710000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>575000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2900</td>\n",
+       "      <td>600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3100</td>\n",
+       "      <td>620000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>695000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    town  area   price\n",
+       "0      0  2600  550000\n",
+       "1      0  3000  565000\n",
+       "2      0  3200  610000\n",
+       "3      0  3600  680000\n",
+       "4      0  4000  725000\n",
+       "5      2  2600  585000\n",
+       "6      2  2800  615000\n",
+       "7      2  3300  650000\n",
+       "8      2  3600  710000\n",
+       "9      1  2600  575000\n",
+       "10     1  2900  600000\n",
+       "11     1  3100  620000\n",
+       "12     1  3600  695000"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfle.town= le.fit_transform(dfle.town)\n",
+    "dfle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   0, 2600],\n",
+       "       [   0, 3000],\n",
+       "       [   0, 3200],\n",
+       "       [   0, 3600],\n",
+       "       [   0, 4000],\n",
+       "       [   2, 2600],\n",
+       "       [   2, 2800],\n",
+       "       [   2, 3300],\n",
+       "       [   2, 3600],\n",
+       "       [   1, 2600],\n",
+       "       [   1, 2900],\n",
+       "       [   1, 3100],\n",
+       "       [   1, 3600]])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X=dfle [['town','area']].values \n",
+    "X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=dfle.price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     550000\n",
+       "1     565000\n",
+       "2     610000\n",
+       "3     680000\n",
+       "4     725000\n",
+       "5     585000\n",
+       "6     615000\n",
+       "7     650000\n",
+       "8     710000\n",
+       "9     575000\n",
+       "10    600000\n",
+       "11    620000\n",
+       "12    695000\n",
+       "Name: price, dtype: int64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.0e+00, 0.0e+00, 0.0e+00, 2.6e+03],\n",
+       "       [1.0e+00, 0.0e+00, 0.0e+00, 3.0e+03],\n",
+       "       [1.0e+00, 0.0e+00, 0.0e+00, 3.2e+03],\n",
+       "       [1.0e+00, 0.0e+00, 0.0e+00, 3.6e+03],\n",
+       "       [1.0e+00, 0.0e+00, 0.0e+00, 4.0e+03],\n",
+       "       [0.0e+00, 0.0e+00, 1.0e+00, 2.6e+03],\n",
+       "       [0.0e+00, 0.0e+00, 1.0e+00, 2.8e+03],\n",
+       "       [0.0e+00, 0.0e+00, 1.0e+00, 3.3e+03],\n",
+       "       [0.0e+00, 0.0e+00, 1.0e+00, 3.6e+03],\n",
+       "       [0.0e+00, 1.0e+00, 0.0e+00, 2.6e+03],\n",
+       "       [0.0e+00, 1.0e+00, 0.0e+00, 2.9e+03],\n",
+       "       [0.0e+00, 1.0e+00, 0.0e+00, 3.1e+03],\n",
+       "       [0.0e+00, 1.0e+00, 0.0e+00, 3.6e+03]])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "A = make_column_transformer(\n",
+    "    (OneHotEncoder(categories='auto'), [0]), \n",
+    "    remainder=\"passthrough\")\n",
+    "\n",
+    "x=A.fit_transform(X)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0e+00, 0.0e+00, 2.6e+03],\n",
+       "       [0.0e+00, 0.0e+00, 3.0e+03],\n",
+       "       [0.0e+00, 0.0e+00, 3.2e+03],\n",
+       "       [0.0e+00, 0.0e+00, 3.6e+03],\n",
+       "       [0.0e+00, 0.0e+00, 4.0e+03],\n",
+       "       [0.0e+00, 1.0e+00, 2.6e+03],\n",
+       "       [0.0e+00, 1.0e+00, 2.8e+03],\n",
+       "       [0.0e+00, 1.0e+00, 3.3e+03],\n",
+       "       [0.0e+00, 1.0e+00, 3.6e+03],\n",
+       "       [1.0e+00, 0.0e+00, 2.6e+03],\n",
+       "       [1.0e+00, 0.0e+00, 2.9e+03],\n",
+       "       [1.0e+00, 0.0e+00, 3.1e+03],\n",
+       "       [1.0e+00, 0.0e+00, 3.6e+03]])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=x[:, 1:]\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([543115.33003655])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict([[2,0,2222]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "   "
+   ]
   }
  ],
  "metadata": {
